--- a/RedBox/app/views/EOM.html
+++ b/RedBox/app/views/EOM.html
@@ -45,7 +45,7 @@
 	        </md-card>
 	    </div>
 	    <div flex>
-	        <md-card ng-repeat="eom in eoms track by $index">
+	        <md-card ng-repeat="eom in eoms track by $index | orderBy : 'date' : true">
 	            <md-toolbar class="md-primary">
 	                <md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center">
 	                    <div>
