--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -6,7 +6,7 @@
                 <textarea ng-model="suggestionDesc" columns="1" maxlength="100" md-maxlength="100"></textarea>
             </md-input-container>
             <md-card-actions layout="row" layout-align="center center">
-                <md-button class="md-raised md-primary" ng-disabled="suggestionDesc&&suggestionDesc.length>10 " ng-click="submitSuggestion(suggestionDesc)"><span class="fa fa-lightbulb-o"></span> Submit</md-button>
+                <md-button class="md-raised md-primary" ng-disabled="!suggestionDesc" ng-click="submitSuggestion(suggestionDesc)"><span class="fa fa-lightbulb-o"></span> Submit</md-button>
             </md-card-actions>
         </md-card>
     </div>
@@ -31,7 +31,7 @@
                 <span class="claim">{{suggestion.description}}</span>
             </md-card-content>
             <md-card-actions layout="row" layout-align="left center">
-                <md-button ng-if="!suggestion.archived" ng-click="archiveSuggestion(suggestion.id)" ><span class="fa fa-archive"></span> Archive</md-button>
+                <md-button ng-if="!suggestion.archived && currentUser.isAdmin" ng-click="archiveSuggestion(suggestion.id)"><span class="fa fa-archive"></span> Archive</md-button>
             </md-card-actions>
         </md-toolbar>
         <md-toolbar flex-gt-sm="50" layout-align="center stretch" class="md-dark text-center">
