--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -1,7 +1,7 @@
 ﻿<div class="callout-box">
     <div class="container">
         <md-card layout-sm="columns" layout-gt-sm="columns" layout-padding>
-            <md-input-container class="md-block" flex>
+            <md-input-container class="md-block big" flex>
                 <label>Type your suggestion or idea here</label>
                 <textarea ng-model="suggestionDesc" columns="1" maxlength="100" md-maxlength="100"></textarea>
             </md-input-container>
