--- a/RedBox/app/views/Events.html
+++ b/RedBox/app/views/Events.html
@@ -39,9 +39,9 @@
         <md-toolbar class="md-primary">
             <md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center">
                 <div flex> 
-                    <strong>{{event.userName}}</strong>
+                    <small>{{event.userName}}</small>
                     <br>
-                    <p>{{event.description}}</p>
+                    <p><strong>{{event.description}}</strong></p>
                     <p>{{event.location}}</p>
                     <p>{{event.when}} / {{event.at}}</p>
                 </div>
